crates/next-custom-transforms/tests/errors/server-actions/server-graph/15/output.js
export default function() {}
export function foo() {}
export const bar = ()=>{};
